force-app/main/default/objects/Recovery__c/Recovery__c.object-meta.xml
<CustomObject>
    <description>Container for recoveries offered to the customer</description>
    <label>Recovery</label>
    <nameField>
        <displayFormat>R{00000000}</displayFormat>
        <label>Recovery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recoveries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>