force-app/main/default/objects/Recovery__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>QCC: Used to store the Account Type of the Bank Account for EFT refunds</description>
    <inlineHelpText>Required for bank accounts in USA/South America and South Africa</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>