force-app/main/default/objects/Recovery__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>QCC: Created to show/store Total amount provided to customer.</description>
    <label>Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>