force-app/main/default/objects/Recovery__c/fields/API_Attempts__c.field-meta.xml
<CustomField>
    <fullName>API_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>QCC: Identifies the number of failed attempts made to call the Loyalty API</description>
    <label>API Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>