force-app/main/default/objects/Recovery__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QCC: Created to show/store person who approved the financial recovery.</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recoveries_User_AB</relationshipName>
    <type>Lookup</type>
</CustomField>