force-app/main/default/objects/Recovery__c/fields/ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>ApprovedBy__c</fullName>
    <description>This field record the details of the individual who approved this recovery</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>