force-app/main/default/objects/Recovery__c/fields/Approver_Comment__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comment__c</fullName>
    <description>Comment left on the recovery after approving/rejecting it</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Approver Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>