force-app/main/default/objects/Recovery__c/fields/Automated_Currency_Conversion_Complete__c.field-meta.xml
<CustomField>
    <fullName>Automated_Currency_Conversion_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if external API was invoked for automated currency conversion</description>
    <label>Automated Currency Conversion Complete</label>
    <type>Checkbox</type>
</CustomField>