force-app/main/default/objects/Recovery__c/fields/Awaiting_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Customer_Date__c</fullName>
    <formula>DATEVALUE(LastModifiedDate ) +  $CustomMetadata.Recovery_Configs__mdt.DefaultValue.NoOfDaysToWaitFromCustomer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Awaiting Customer Date</label>
    <type>Date</type>
</CustomField>