force-app/main/default/objects/Recovery__c/fields/Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Name__c</fullName>
    <description>QCC: Used to store the name of the Bank Account that is having funds deposited for EFT refund recoveries</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>