force-app/main/default/objects/Recovery__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>QCC: Used to store the bank account number for EFT refund recoveries</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Alphanumeric characters only i.e. must not contain dashes, slashes, spaces, etc.</inlineHelpText>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>