force-app/main/default/objects/Recovery__c/fields/Bank_Details_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details_Updated_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Details Updated Date</label>
    <type>DateTime</type>
</CustomField>