force-app/main/default/objects/Recovery__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>QCC: Used to store the name of the bank for EFT refunds given as a recovery</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Financial Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>