force-app/main/default/objects/Recovery__c/fields/Bank_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Reference_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>