force-app/main/default/objects/Recovery__c/fields/Bespoke_exgratia_payment__c.field-meta.xml
<CustomField>
    <fullName>Bespoke_exgratia_payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <label>Bespoke exgratia payment</label>
    <type>Checkbox</type>
</CustomField>