force-app/main/default/objects/Recovery__c/fields/Booking_currency__c.field-meta.xml
<CustomField>
    <fullName>Booking_currency__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Booking currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>