force-app/main/default/objects/Recovery__c/fields/Booking_email__c.field-meta.xml
<CustomField>
    <fullName>Booking_email__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Booking email</label>
    <type>Email</type>
</CustomField>