force-app/main/default/objects/Recovery__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <description>QCC: Used to store the name of the bank branch for EFT refunds as recovery</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>