force-app/main/default/objects/Recovery__c/fields/Branch_Number_BSB_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Number_BSB_Sort_Code__c</fullName>
    <description>QCC: Used to store the Branch Identification number for EFT recoveries</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Alphanumeric characters only i.e. must not contain dashes, slashes, spaces, etc.</inlineHelpText>
    <label>Branch Number(BSB/SortCode/Routing Code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>