force-app/main/default/objects/Recovery__c/fields/Branch_Party_Id__c.field-meta.xml
<CustomField>
    <fullName>Branch_Party_Id__c</fullName>
    <description>QCC: Used to store the Bank Branch Party Id for EFT Refunds</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Party Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>