force-app/main/default/objects/Recovery__c/fields/Branch_Swift_BIC_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Swift_BIC_Code__c</fullName>
    <description>Used to store the Branch Swift/BIC code for EFT refunds</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Required for foreign payments</inlineHelpText>
    <label>Branch Swift / BIC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>