force-app/main/default/objects/Recovery__c/fields/Cabin_class__c.field-meta.xml
<CustomField>
    <fullName>Cabin_class__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cabin class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>