force-app/main/default/objects/Recovery__c/fields/Card_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiry__c</fullName>
    <description>QCC; Used to store the abbreviated expiry month/year for credit card</description>
    <formula>LEFT(TEXT(Card_Expiry_Month__c),2) &amp; &quot;/&quot; &amp; RIGHT(TEXT(Card_Expiry_Year__c),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Expiry</label>
    <type>Text</type>
</CustomField>