force-app/main/default/objects/Recovery__c/fields/Card_Expiry_Month__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiry_Month__c</fullName>
    <description>QCC: Used to store the credit card expiry month for credit card refund recoveries</description>
    <label>Card Expiry Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 (Jan)</fullName>
            </value>
            <value>
                <fullName>02 (Feb)</fullName>
            </value>
            <value>
                <fullName>03 (Mar)</fullName>
            </value>
            <value>
                <fullName>04 (Apr)</fullName>
            </value>
            <value>
                <fullName>05 (May)</fullName>
            </value>
            <value>
                <fullName>06 (Jun)</fullName>
            </value>
            <value>
                <fullName>07 (Jul)</fullName>
            </value>
            <value>
                <fullName>08 (Aug)</fullName>
            </value>
            <value>
                <fullName>09 (Sep)</fullName>
            </value>
            <value>
                <fullName>10 (Oct)</fullName>
            </value>
            <value>
                <fullName>11 (Nov)</fullName>
            </value>
            <value>
                <fullName>12 (Dec)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>