force-app/main/default/objects/Recovery__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <description>QCC: Used to store the card type for credit card reimbursement recovery types</description>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AX (American Express)</fullName>
            </value>
            <value>
                <fullName>CA (Master Card)</fullName>
            </value>
            <value>
                <fullName>DC (Diners Club)</fullName>
            </value>
            <value>
                <fullName>VI (Visa)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>