force-app/main/default/objects/Recovery__c/fields/Case_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Case_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QCC: Created to show/store who was assigned the case?</description>
    <label>Case Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recoveries_User</relationshipName>
    <type>Lookup</type>
</CustomField>