force-app/main/default/objects/Recovery__c/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <description>QCC: Case Category</description>
    <formula>Text(Case_Number__r.Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Category</label>
    <type>Text</type>
</CustomField>