force-app/main/default/objects/Recovery__c/fields/Case_Investigated_By__c.field-meta.xml
<CustomField>
    <fullName>Case_Investigated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QCC: Created to show/store person who investigated the case.</description>
    <label>Case Investigated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recoveries_User_CIB</relationshipName>
    <type>Lookup</type>
</CustomField>