force-app/main/default/objects/Recovery__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QCC: Created to show/store Case number the recovery is associated to</description>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Recoveries</relationshipLabel>
    <relationshipName>Recoveries_Case</relationshipName>
    <type>Lookup</type>
</CustomField>