force-app/main/default/objects/Recovery__c/fields/case_Origin__c.field-meta.xml
<CustomField>
    <fullName>case_Origin__c</fullName>
    <description>Used in Approval Process to check for Red App Case</description>
    <formula>TEXT(Case_Number__r.Origin)</formula>
    <label>case Origin</label>
    <type>Text</type>
</CustomField>