force-app/main/default/objects/Recovery__c/fields/Case_Outcome_Delivered_By__c.field-meta.xml
<CustomField>
    <fullName>Case_Outcome_Delivered_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QCC: Created to show/store agent who closed the case.</description>
    <label>Case Outcome Delivered By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recoveries_User_CODB</relationshipName>
    <type>Lookup</type>
</CustomField>