force-app/main/default/objects/Recovery__c/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <description>Case Status</description>
    <formula>TEXT(Case_Number__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Status</label>
    <type>Text</type>
</CustomField>