force-app/main/default/objects/Recovery__c/fields/CaseAssignedTo__c.field-meta.xml
<CustomField>
    <fullName>CaseAssignedTo__c</fullName>
    <description>Stores the first person to work on this case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Assigned To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>