force-app/main/default/objects/Recovery__c/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <description>CASE Number For loyalty API</description>
    <formula>Case_Number__r.CaseNumber</formula>
    <label>CaseNumber</label>
    <type>Text</type>
</CustomField>