force-app/main/default/objects/Recovery__c/fields/Claim_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status_Date__c</fullName>
    <description>claim status update date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Status Date</label>
    <type>Date</type>
</CustomField>