force-app/main/default/objects/Recovery__c/fields/Colour_of_Bag__c.field-meta.xml
<CustomField>
    <fullName>Colour_of_Bag__c</fullName>
    <description>The colour of the replacement bag</description>
    <label>Colour of Bag</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Replacement_Bag_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anthracite</fullName>
            </value>
            <value>
                <fullName>Metallic blue</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
            <value>
                <fullName>Tangerine</fullName>
            </value>
            <value>
                <fullName>Rouge</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Night blue</fullName>
            </value>
            <value>
                <fullName>Navy</fullName>
            </value>
            <value>
                <fullName>Coral</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Cyan Blue</fullName>
                <isActive>false</isActive>
                <label>Cyan Blue</label>
            </value>
            <value>
                <fullName>Light blue</fullName>
                <isActive>false</isActive>
                <label>Light blue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>