force-app/main/default/objects/Recovery__c/fields/Complementary_Frequent_Flyer_Membership__c.field-meta.xml
<CustomField>
    <fullName>Complementary_Frequent_Flyer_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC:</description>
    <label>Complementary Frequent Flyer Membership</label>
    <type>Checkbox</type>
</CustomField>