force-app/main/default/objects/Recovery__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>QCC: Created to show/store Contact associated with the recovery.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recoveries</relationshipLabel>
    <relationshipName>Recoveries_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>