force-app/main/default/objects/Recovery__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>QCC: Used to store the email of the contact for QF Wine/Hotel vouchers</description>
    <formula>Case_Number__r.Contact_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>