force-app/main/default/objects/Recovery__c/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <description>QCC: Used to store the first name of the contact for EFT/Credit card refunds</description>
    <formula>Case_Number__r.First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>