force-app/main/default/objects/Recovery__c/fields/Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Full_Name__c</fullName>
    <description>Reporting field</description>
    <formula>Case_Number__r.First_Name__c &amp;&quot; &quot;&amp; Case_Number__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Full Name</label>
    <type>Text</type>
</CustomField>