force-app/main/default/objects/Recovery__c/fields/Contact_LastName__c.field-meta.xml
<CustomField>
    <fullName>Contact_LastName__c</fullName>
    <description>QCC Loyalty API</description>
    <formula>Case_Number__r.Last_Name__c</formula>
    <label>Contact LastName</label>
    <type>Text</type>
</CustomField>