force-app/main/default/objects/Recovery__c/fields/Contact_Validation_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Validation_Email__c</fullName>
    <description>Stores input Contact Email coming from recovery frontend payload to validate bank data submission</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Validation Email</label>
    <type>Email</type>
</CustomField>