force-app/main/default/objects/Recovery__c/fields/Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>For ticket refund this is the ticket issue date</inlineHelpText>
    <label>Conversion Date</label>
    <type>DateTime</type>
</CustomField>