force-app/main/default/objects/Recovery__c/fields/CorrelationID__c.field-meta.xml
<CustomField>
    <fullName>CorrelationID__c</fullName>
    <description>Correlation_ID unique to the passenger</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Correlation ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>