force-app/main/default/objects/Recovery__c/fields/Cost_Centre_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre_Account_Number__c</fullName>
    <label>Cost Centre/Account Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airports : Baggage Damaged (100814 : 718011)</fullName>
            </value>
            <value>
                <fullName>Airports : Baggage Lost (100814 : 718006)</fullName>
            </value>
            <value>
                <fullName>Customer Care : Ex Gratia Passenger (309276 : 718017)</fullName>
                <label>Customer Care : Goodwill Passenger (309276 : 718017)</label>
            </value>
            <value>
                <fullName>Customer Care : Ops Expenditure (309276 : 718086)</fullName>
                <label>Customer Care : Delays and Operational (309276 : 718086)</label>
            </value>
            <value>
                <fullName>Customer Care : Events  (309276 : 718009)</fullName>
            </value>
            <value>
                <fullName>Baggage Goodwill : Baggage Emergency Expenses (101366 :  718000)</fullName>
            </value>
            <value>
                <fullName>Baggage Goodwill :  Baggage Pilferage (101366 : 718044)</fullName>
            </value>
            <value>
                <fullName>EU Regulation :  EU Regulation (800301 : 712001)</fullName>
            </value>
            <value>
                <fullName>Canada Regulation : Canada Regulation (100333 : 718100)</fullName>
            </value>
            <value>
                <fullName>Full Cost Centre/ Account Number</fullName>
            </value>
            <value>
                <fullName>Customer Service : Cargo Claims (557175: 715110)</fullName>
            </value>
            <value>
                <fullName>Customer Service : Sent to Wrong Destination / Mishandled (557175: 715105)</fullName>
            </value>
            <value>
                <fullName>Sydney Freight : Cargo Claims (557143 : 715110)</fullName>
            </value>
            <value>
                <fullName>Sydney Freight : Sent to Wrong Destination / Mishandled (557143 : 715105)</fullName>
            </value>
            <value>
                <fullName>Melbourne Freight : Cargo Claims (557151 : 715110)</fullName>
            </value>
            <value>
                <fullName>Melbourne Freight : Sent to Wrong Destination / Mishandled (557151 : 715105)</fullName>
            </value>
            <value>
                <fullName>INT Baggage Solutions : Baggage Recharge (100782 : 718007)</fullName>
            </value>
            <value>
                <fullName>FF Operations : Operations and Service Centre (169789 : 754905)</fullName>
            </value>
            <value>
                <fullName>QANTAS Fin Svcs REVERA (100759 : 390527)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>