force-app/main/default/objects/Recovery__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>QCC: Used to store the abbreviated form of the POS refund country</description>
    <formula>LEFT(TEXT(Refund_POS_Country__c), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>