force-app/main/default/objects/Recovery__c/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <formula>SUBSTITUTE(RIGHT( TEXT(Refund_POS_Country__c),(LEN( TEXT(Refund_POS_Country__c))-FIND(&quot;(&quot;, TEXT(Refund_POS_Country__c)))),&apos;)&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Name</label>
    <type>Text</type>
</CustomField>