force-app/main/default/objects/Recovery__c/fields/Credit_Card_Token__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Token__c</fullName>
    <description>QCC: For EFT/credit card recoveries, used to capture to credit card token used for refund</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Credit Card token must be entered in upper case</inlineHelpText>
    <label>Credit Card Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>