force-app/main/default/objects/Recovery__c/fields/Currency_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Currency_Conversion_Rate__c</fullName>
    <description>QCC: Used to track the conversion rate between the original currency and AUD (which the refund will be paid in) for EFT/credit card refund recoveries</description>
    <inlineHelpText>Rate used to convert Equivalent AUD amount to Payment currency amount. If original currency is AUD, conversion rate is set to 1.</inlineHelpText>
    <label>Currency Conversion Rate</label>
    <precision>14</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>