force-app/main/default/objects/Recovery__c/fields/Customer_current_FFP__c.field-meta.xml
<CustomField>
    <fullName>Customer_current_FFP__c</fullName>
    <description>QCC: Created to show/store Customer&apos;s frequent flyer.</description>
    <label>Customer&apos;s current FFP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>