force-app/main/default/objects/Recovery__c/fields/Departing_port__c.field-meta.xml
<CustomField>
    <fullName>Departing_port__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Departing port</label>
    <length>50</length>
    <type>Text</type>
</CustomField>