force-app/main/default/objects/Recovery__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>QCC: Used to store/show the Recovery description</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is limited to 100 characters</inlineHelpText>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>