force-app/main/default/objects/Recovery__c/fields/Disruption__c.field-meta.xml
<CustomField>
    <fullName>Disruption__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Disruption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>