force-app/main/default/objects/Recovery__c/fields/Disruption_duration__c.field-meta.xml
<CustomField>
    <fullName>Disruption_duration__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <label>Disruption duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>