force-app/main/default/objects/Recovery__c/fields/DR_GL_Account_No__c.field-meta.xml
<CustomField>
    <fullName>DR_GL_Account_No__c</fullName>
    <defaultValue>&apos;QF.100134.111104.000000.00&apos;</defaultValue>
    <description>QCC: Used to store the constant DR Account value for Credit Card refunds.&apos; QF.100134.111104.000000.00&apos;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DR GL Account No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>