force-app/main/default/objects/Recovery__c/fields/Equivalent_AUD__c.field-meta.xml
<CustomField>
    <fullName>Equivalent_AUD__c</fullName>
    <description>QCC: used for data migration from Resolve</description>
    <label>Equivalent AUD</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>