force-app/main/default/objects/Recovery__c/fields/Equivalent_AUD_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Equivalent_AUD_Refund_Amount__c</fullName>
    <description>QCC: Used to store the Refund Amount in AUD that will be paid to the customer</description>
    <formula>Value__c*Currency_Conversion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equivalent AUD Refund Amount(Deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>