force-app/main/default/objects/Recovery__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>Recovery log. Error Code for each recovery record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>