force-app/main/default/objects/Recovery__c/fields/FF_ID__c.field-meta.xml
<CustomField>
    <fullName>FF_ID__c</fullName>
    <description>Used in exgratia flight pass recovery process</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FF ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>