force-app/main/default/objects/Recovery__c/fields/FF_Number__c.field-meta.xml
<CustomField>
    <fullName>FF_Number__c</fullName>
    <description>QCC Frequent Flyer</description>
    <formula>Case_Number__r.Contact.Frequent_Flyer_Number__c</formula>
    <label>FF Number</label>
    <type>Text</type>
</CustomField>