force-app/main/default/objects/Recovery__c/fields/FF_Tier__c.field-meta.xml
<CustomField>
    <fullName>FF_Tier__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FF Tier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>