force-app/main/default/objects/Recovery__c/fields/Findel_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Findel_Approval_Date__c</fullName>
    <description>Findel Approval Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Findel Approval Date</label>
    <type>Date</type>
</CustomField>