force-app/main/default/objects/Recovery__c/fields/Findel_Approver__c.field-meta.xml
<CustomField>
    <fullName>Findel_Approver__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Findel Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>