force-app/main/default/objects/Recovery__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flight</label>
    <length>50</length>
    <type>Text</type>
</CustomField>