force-app/main/default/objects/Recovery__c/fields/Flight_date__c.field-meta.xml
<CustomField>
    <fullName>Flight_date__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flight date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>