force-app/main/default/objects/Recovery__c/fields/Flight_elibility__c.field-meta.xml
<CustomField>
    <fullName>Flight_elibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <label>Flight elibility</label>
    <type>Checkbox</type>
</CustomField>