force-app/main/default/objects/Recovery__c/fields/Fulfilled_By_profile__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_By_profile__c</fullName>
    <description>QCC: Back end Field To store Fulled by Profile Name and Used in reports</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fulfilled By profile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>