force-app/main/default/objects/Recovery__c/fields/Fulfilled_Date__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Date__c</fullName>
    <description>Qcc: To Store the fulfilled Date and time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fulfilled Date</label>
    <type>DateTime</type>
</CustomField>